# Mongodb_qml_client

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.qml  qml.qrc
src/cpp/: JsonModle.cpp  JsonModle.h
src/js/: HandleJson.js
src/qml/: JsonView.qml  testRect.qml
